kubernetes/manifests/provisioner/namespace.yaml
# [ADD START]
apiVersion: v1
kind: Namespace
metadata:
  name: provisioner
# [ADD END]
